refactor : 리소스 값 서비스 리펙토링